--- a/homepage.html
+++ b/homepage.html
@@ -17,10 +17,23 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 <body>
     <header>
         <!-- navBar creation -->
-        <nav class="nav nav-masthead justify-content-end">
-            <a class="nav-link active" href="#">Accueil</a>
-            <a class="nav-link" href="#">Fonctionnalités</a>
-            <a class="nav-link" href="#">Contact</a>
+        <nav class="navbar navbar-expand-lg navbar-dark blueBackground">
+            <button class="navbar-toggler mx-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon white"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav my-2">
+                <li class="nav-item active">
+                  <a class="nav-link" href="homepage.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Fonctionnalités</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Tarifs</a>
+                </li>
+              </ul>
+            </div>
           </nav>
     <!-- Openning logo container -->
     <div class="container">
@@ -110,7 +123,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                 <!-- Closing account informations col-->    
                 </div>
                 <!-- Account creation button -->
-                <div class="col-6 col-md-4 col-lg-4 text-center mt-5">
+                <div class="col-8 col-md-4 col-lg-4 text-center mt-5">
                     <button class="btn btn-outline-light accountButton border rounded shadow" type="button" data-toggle="modal" data-target="#accountModal">Créer un compte</button>
                 <!-- Closing btn col -->
                 </div>
@@ -134,8 +147,10 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                                     <button type="button" class="btn blueBackground categoryButton btn-outline-light">Hôtel</button>
                                 <!-- Closing Hotel choice col -->
                                 </div>
+                                <!-- oppening "or" col -->
                                 <div class="col-2 text-center align-self-center">
                                     <p class="orModal">Ou</p>
+                                <!-- Closing "or" col -->
                                 </div>
                                 <!-- Opening services choice -->
                                 <div class="col-5 text-center">
@@ -145,6 +160,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                               </div>
                           </div>
                         </div>
+                        <!-- Modal footer -->
                         <div class="modal-footer mt-3 blueBackground rounded">
                           <button type="button" class="btn btn-secondary btn-outline-light closeModal" data-dismiss="modal">Close</button>
                         </div>
