--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                   <a class="nav-link" href="homepage.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Fonctionnalités</a>
+                  <a class="nav-link" href="functions.html">Fonctionnalités</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Tarifs</a>
@@ -107,7 +107,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                 <!-- List col -->
                 <div class="col-10 col-md-5 col-lg-5 border rounded shadow mx-md-3 ">
                     <h2 class="tangerine mt-2">Quelques chiffres :</h2>
-                    <ul>
+                    <ul class="didot">
                         <li class="listMargin">117 établissements hôteliers nous ont fait confiance et sont déja partenaire.</li>
                         <li class="listMargin">Des centaines de prestataires proposant des services de qualité et sélectionnés pour leur proffessionalisme.</li>
                         <li class="listMargin">Des milliers de services réservés chaque jour par les clients en séjour dans les établissements partenaires.</li>
@@ -119,7 +119,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                 <!-- Oppening account informations col-->
                 <div class="col-10 col-md-5 col-lg-5 mt-5 mt-md-0 mt-lg-0 mx-md-3 border rounded shadow">
                     <h2 class="tangerine mt-2">Essayez dès maintenant :</h2>
-                    <p class="listMargin">Créez votre compte gratuitement afin d’essayer Les services de notre plateforme, et augmentez votre taux de réservatione ainsi que votre chiffre d'affaire dès maintenant !</p>
+                    <p class="listMargin didot">Créez votre compte gratuitement afin d’essayer Les services de notre plateforme, et augmentez votre taux de réservatione ainsi que votre chiffre d'affaire dès maintenant !</p>
                 <!-- Closing account informations col-->    
                 </div>
                 <!-- Account creation button -->
