Fin de l'élaboration de la page fonctions

--- a/functions.html
+++ b/functions.html
@@ -109,8 +109,23 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                 <div class="col-10 text-center">
                     <h2 class="functionsTitle tangerine">Découvrez nos vidéos de présentation</h2>
                 </div>
+            <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
+                <video width="500" height="300" controls>
+                    <source src="assets/video/Seoul - 21985.mp4">
+                </video>
             </div>
-        </div>
+                <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
+                    <video width="500" height="300" controls>
+                        <source src="assets/video/Scuba Diving - 699.mp4">
+                    </video>
+                </div>
+                  <!-- Account creation button -->
+              <div class="col-8 col-md-4 col-lg-4 text-center mt-5">
+                <button class="btn btn-outline-light accountButton border rounded shadow" type="button" data-toggle="modal" data-target="#accountModal">Créer un compte</button>
+            <!-- Closing btn col -->
+            </div>
+             </div>
+            </div>
     </section>
     <footer class="blueBackground text-center text-white">
         <!-- Footer container -->
