Finalisation de la page tarification

--- a/functions.html
+++ b/functions.html
@@ -27,10 +27,10 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                   <a class="nav-link" href="homepage.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Fonctionnalités</a>
+                  <a class="nav-link" href="functions.html">Fonctionnalités</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Tarifs</a>
+                  <a class="nav-link" href="prices.html">Tarifs</a>
                 </li>
               </ul>
             </div>
@@ -54,7 +54,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
             <div class="row justify-content-center">
                 <!-- Functions title col -->
                 <div class="col-10 text-center mt-5">
-                    <h1 class="functionsTitle tangerine">Les fonctionnalités proposées</h1>
+                    <h1 class="pageTitle tangerine">Les fonctionnalités proposées</h1>
                 </div>
                 <!-- Functions content 1 -->
                 <div class="col-10 col-md-5 col-lg-5 border rounded shadow mx-md-3 text-center mt-5">
@@ -106,26 +106,31 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
             </div>
             <!-- Creating presentation vids row -->
             <div class="row justify-content-center mt-5">
+                <!-- Presentation cids title col -->
                 <div class="col-10 text-center">
                     <h2 class="functionsTitle tangerine">Découvrez nos vidéos de présentation</h2>
                 </div>
-            <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
-                <video width="500" height="300" controls>
-                    <source src="assets/video/Seoul - 21985.mp4">
-                </video>
-            </div>
+                <!-- First vid col -->
+                <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
+                    <video width="500" height="300" controls>
+                        <source src="assets/video/Seoul - 21985.mp4">
+                    </video>
+                </div>
+            <!-- Second vid col -->
                 <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
                     <video width="500" height="300" controls>
                         <source src="assets/video/Scuba Diving - 699.mp4">
                     </video>
                 </div>
                   <!-- Account creation button -->
-              <div class="col-8 col-md-4 col-lg-4 text-center mt-5">
-                <button class="btn btn-outline-light accountButton border rounded shadow" type="button" data-toggle="modal" data-target="#accountModal">Créer un compte</button>
+                <div class="col-8 col-md-4 col-lg-4 text-center mt-5">
+                    <button class="btn btn-outline-light accountButton border rounded shadow" type="button" data-toggle="modal" data-target="#accountModal">Créer un compte</button>
             <!-- Closing btn col -->
+                </div>
+            <!-- Closing presentation div row -->   
             </div>
-             </div>
-            </div>
+        <!-- Closing container -->
+        </div>
     </section>
     <footer class="blueBackground text-center text-white">
         <!-- Footer container -->
