--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                   <a class="nav-link" href="functions.html">Fonctionnalités</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Tarifs</a>
+                  <a class="nav-link" href="prices.html">Tarifs</a>
                 </li>
               </ul>
             </div>
