--- a/functions.html
+++ b/functions.html
@@ -111,14 +111,14 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                     <h2 class="functionsTitle tangerine">Découvrez nos vidéos de présentation</h2>
                 </div>
                 <!-- First vid col -->
-                <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
-                    <video width="500" height="300" controls>
+                <div class="col-10 col-md-6 col-lg-6 mt-5">
+                    <video width="100%" height="100%" controls>
                         <source src="assets/video/Seoul - 21985.mp4">
                     </video>
                 </div>
             <!-- Second vid col -->
-                <div class="col-5 col-md-5 col-lg-5 mx-4 mt-5">
-                    <video width="500" height="300" controls>
+                <div class="col-10 col-md-6 col-lg-6 mt-5">
+                    <video width="100%" height="100%" controls>
                         <source src="assets/video/Scuba Diving - 699.mp4">
                     </video>
                 </div>
