--- a/proAccountCreation.html
+++ b/proAccountCreation.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Landing page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Account creation</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Google fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -15,7 +16,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 </head>
 <body>
     <header>
-         <!-- Openning logo container -->
+    <!-- Openning logo container -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-10 col-md-4 col-lg-4 text-center mt-3">
@@ -28,36 +29,17 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
     </header>
     <section>
         <div class="container">
-            <div class="col-12">
-                <img class="landingImage" src="assets/img/camera-g5215acf9d_640.jpg">
-            </div>
             <div class="row justify-content-center">
-                <div class="col-10 col-md-4 col-lg-4 pricingCol rounded mt-4">
-                    <h1 class="tangerine mt-3 text-center">Prêts pour l'aventure ?</h1>
-                    <div class="row justify-content-center">
-                        <div class="col-8">
-                            <form>
-                                <label class="mt-3 didot" for="fname">Nom</label><br>
-                                <input type="text" id="lastName" name="lastName"><br>
-                                <label class="mt-3 didot" for="lname">Prénom</label><br>
-                                <input type="text" id="firstName" name="firstName">
-                                <label class="mt-3 didot" for="mail">Adresse e-mail</label><br>
-                                <input type="mail" id="mail" name="mail"><br>
-                                <label class="mt-3 didot" for="phone">Numéro de téléphone</label><br>
-                                <input type="text" id="phone" name="phone">
-                            </form>
-                        </div>
-                        <div class="col-12 text-center">
-                            <button class="my-4 text-center priceButton rounded"> C'est parti !</button>
-                        </div>
-                    </div>
+                <div class="col-10 col-md-6 col-lg-6 text-center">
+                <h1 class="pageTitle tangerine">Un horizon de possibilités</h1>
+                <p class="didot diagonalP">À portée de clic !</p>
                 </div>
             </div>
-
+        </div>
     </section>
     <footer class="blueBackground text-center text-white">
         <!-- Footer container -->
-        <div class="container p-4 pb-0 mt-4">
+        <div class="container p-4 pb-0 mt-5">
           <!-- Social media -->
           <section class="mb-4">
             <!-- Facebook -->
