--- a/proAccountCreation.html
+++ b/proAccountCreation.html
@@ -37,6 +37,23 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
             </div>
         </div>
     </section>
+    <section>
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-3">
+                    <form>
+                        <label>Nom de l'établissement</label><br>
+                        <input type="text" id="nameInput"></input>
+                        <label class="mt-3">Adresse E-mail</label>
+                        <input type="text" id="mailInput"></input>
+                        <label class="mt-3">Mot de passe</label>
+                        <input type="text" id="passwordInput"></input>
+                        <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="blueBackground text-center text-white">
         <!-- Footer container -->
         <div class="container p-4 pb-0 mt-5">
