--- a/accountCreationConfirmed.html
+++ b/accountCreationConfirmed.html
@@ -27,35 +27,28 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
     <!--Closing container-->    
     </div>
     </header>
-    <!-- Titre page -->
-    <section>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-10 col-md-6 col-lg-6 text-center">
-                <h1 class="pageTitle tangerine">Un horizon de possibilités</h1>
-                <p class="didot diagonalP">À portée de clic !</p>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8 text-center">
+                <h1 class="pageTitle tangerine mt-5">Dernière étape avant de rejoindre l'aventure !</h1>
+                <p class="didot">Nous avons bien enregistrée votre demande.</p>
+                <hr class="mt-5" style="width:740px; color:#4E629C; height:5px;">
+                <div class="backgroundImg">
+                    <img class="mt-5 rounded" src="assets/img/desk-gf4ea73706_640.jpg">
+                    <button class="imageButton btn btn-outline-light priceButton border rounded shadow">Finaliser le compte</button>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Formulaire d'inscription -->
-    <section>
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-3">
-                    <form>
-                        <label>Nom de l'établissement</label><br>
-                        <input type="text" id="nameInput"></input>
-                        <label class="mt-3">Adresse E-mail</label>
-                        <input type="text" id="mailInput"></input>
-                        <label class="mt-3">Mot de passe</label>
-                        <input type="text" id="passwordInput"></input>
-                        <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
-                    </form>
-                </div>
+        <div class="row justify-content-center mt-5">
+            <div class="col-10 col-md-6 col-lg-6 text-center pricingCol rounded">
+                <h2 class="tangerine mt-5">Vous faites partie de la communauté Liugo !</h2>
+                <p class="didot mt-5">Vous recevrez prochainement un e-mail de confirmation. Afin de pouvoir accéder à votre espace et commencer à personnaliser votre page d'accueil et les services proposés, nous avons besoin de plus d'informations.</p>
+                <p class="didot">Dans l'attente de la complétion de vos informations, vous pouvez dès maintenant découvrir les différentes fonctionnalités proposées</p>
+                <a href="functions.html"><button href="functions.html" type="button" class="btn btn-outline-light priceButton border rounded shadow mb-4">Découvrir</button></a>
             </div>
-        </div>
-    </section>
+        </div> 
+    </div>
+   
     <footer class="blueBackground text-center text-white">
         <!-- Footer container -->
         <div class="container p-4 pb-0 mt-5">
@@ -105,6 +98,4 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    <!-- My Javascript -->
-<script src="assets/script.js"></script>
 </html>
