--- a/customerLandingPage.html
+++ b/customerLandingPage.html
@@ -48,7 +48,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                             </form>
                         </div>
                         <div class="col-12 text-center">
-                            <button class="my-4 text-center priceButton rounded"> C'est parti !</button>
+                            <button class="btn btn-outline-light priceButton border rounded shadow my-3"> C'est parti !</button>
                         </div>
                     </div>
                 </div>
