--- a/proAccountCreation.html
+++ b/proAccountCreation.html
@@ -42,7 +42,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
     <section>
         <div class="container mt-5">
             <div class="row justify-content-center">
-                <div class="col-3">
+                <div class="col-7">
                     <form>
                         <label>Nom de l'établissement</label><br>
                         <input type="text" id="nameInput"></input>
@@ -50,7 +50,9 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                         <input type="text" id="mailInput"></input>
                         <label class="mt-3">Mot de passe</label>
                         <input type="text" id="passwordInput"></input>
+                        <div class="col-12 text-center">
                         <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
+                        </div>
                     </form>
                 </div>
             </div>
