--- a/subscriptionFinalisation.html
+++ b/subscriptionFinalisation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account creation</title>
+    <title>Account finalisation</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Google fonts -->
@@ -61,7 +61,9 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                             <button>Explorateur de fichiers</button>
                             <input id="fileInput" type="file" hidden>
                         </div>
+                        <div class="col-12 text-center">
                         <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
+                        </div>
                     </form>
                 </div>
             </div>
