--- a/connexionPage.html
+++ b/connexionPage.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Landing page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Page de connexion</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Google fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -15,7 +16,29 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 </head>
 <body>
     <header>
-         <!-- Openning logo container -->
+        <!-- Navbar creation -->
+        <nav class="navbar navbar-expand-lg navbar-dark blueBackground">
+            <button class="navbar-toggler mx-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon white"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav my-2">
+                <li class="nav-item active">
+                  <a class="nav-link" href="homepage.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="functions.html">Fonctionnalités</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="prices.html">Tarifs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="proAccountCreation.html">Mon compte</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    <!-- Openning logo container -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-10 col-md-4 col-lg-4 text-center mt-3">
@@ -26,46 +49,44 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
     <!--Closing container-->    
     </div>
     </header>
+    <!-- Titre page -->
     <section>
-        <!-- Form container -->
         <div class="container">
-            <div class="col-12">
-                <!-- Landing image -->
-                <img class="landingImage" src="assets/img/camera-g5215acf9d_640.jpg">
-            </div>
-            <!-- Form row -->
             <div class="row justify-content-center">
-                <!-- Form Col -->
-                <div class="col-10 col-md-4 col-lg-4 pricingCol rounded mt-4">
-                    <!-- Form title -->
-                    <h1 class="tangerine mt-3 text-center">Prêts pour l'aventure ?</h1>
-                    <!-- Inner form row -->
-                    <div class="row justify-content-center">
-                        <!-- Inner form col -->
-                        <div class="col-8">
-                            <form>
-                                <label class="mt-3 didot" for="fname">Nom</label><br>
-                                <input type="text" id="lastName" name="lastName"><br>
-                                <label class="mt-3 didot" for="lname">Prénom</label><br>
-                                <input type="text" id="firstName" name="firstName">
-                                <label class="mt-3 didot" for="mail">Adresse e-mail</label><br>
-                                <input type="mail" id="mail" name="mail"><br>
-                                <label class="mt-3 didot" for="phone">Numéro de téléphone</label><br>
-                                <input type="text" id="phone" name="phone">
-                            </form>
-                        </div>
-                        <!-- Button col -->
-                        <div class="col-12 text-center">
-                            <button class="btn btn-outline-light priceButton border rounded shadow my-3"> C'est parti !</button>
-                        </div>
-                    </div>
+                <div class="col-10 col-md-6 col-lg-6 text-center">
+                <h1 class="pageTitle tangerine">Un horizon de possibilités</h1>
+                <p class="didot diagonalP">À portée de clic !</p>
                 </div>
             </div>
-
+        </div>
+    </section>
+    <!-- Formulaire de connexion -->
+    <section>
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-10 text-center">
+                    <h2 class="tangerine">De retour ? Connectez-vous.</h2>
+                </div>
+                <div class="col-7 col-md-3 col-lg-3">
+                    <form>
+                        <label class="mt-3">Adresse E-mail</label><br>
+                        <input type="text" id="mailInput"></input>
+                        <label class="mt-3">Mot de passe</label>
+                        <input type="text" id="passwordInput"></input>
+                        <div class="col-12 text-center">
+                        <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-12 text-center mt-4">
+                    <img class="rounded" src="assets/img/welcome-sign-g19613aaa4_640.jpg" alt="Signe de bienvenue avec décor de jungle">
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="blueBackground text-center text-white">
         <!-- Footer container -->
-        <div class="container p-4 pb-0 mt-4">
+        <div class="container p-4 pb-0 mt-5">
           <!-- Social media -->
           <section class="mb-4">
             <!-- Facebook -->
@@ -112,4 +133,6 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <!-- My Javascript -->
+<script src="assets/script.js"></script>
 </html>
