--- a/prices.html
+++ b/prices.html
@@ -32,6 +32,9 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                 <li class="nav-item">
                   <a class="nav-link" href="prices.html">Tarifs</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="proAccountCreation.html">Mon compte</a>
+                </li>
               </ul>
             </div>
           </nav>
