--- a/proAccountCreation.html
+++ b/proAccountCreation.html
@@ -16,6 +16,27 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 </head>
 <body>
     <header>
+        <nav class="navbar navbar-expand-lg navbar-dark blueBackground">
+            <button class="navbar-toggler mx-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon white"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav my-2">
+                <li class="nav-item active">
+                  <a class="nav-link" href="homepage.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="functions.html">Fonctionnalités</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="prices.html">Tarifs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="proAccountCreation.html">Mon compte</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
     <!-- Openning logo container -->
     <div class="container">
         <div class="row justify-content-center">
@@ -42,7 +63,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
     <section>
         <div class="container mt-5">
             <div class="row justify-content-center">
-                <div class="col-7">
+                <div class="col-7 col-md-3 col-lg-3">
                     <form>
                         <label>Nom de l'établissement</label><br>
                         <input type="text" id="nameInput"></input>
@@ -50,6 +71,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                         <input type="text" id="mailInput"></input>
                         <label class="mt-3">Mot de passe</label>
                         <input type="text" id="passwordInput"></input>
+                        <p class="didot mt-3">Vous avez déja un compte ? <a href="connexionPage.html">Connectez vous</a></p>
                         <div class="col-12 text-center">
                         <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
                         </div>
