--- a/subscriptionFinalisation.html
+++ b/subscriptionFinalisation.html
@@ -16,6 +16,27 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 </head>
 <body>
     <header>
+        <nav class="navbar navbar-expand-lg navbar-dark blueBackground">
+            <button class="navbar-toggler mx-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon white"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav my-2">
+                <li class="nav-item active">
+                  <a class="nav-link" href="homepage.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="functions.html">Fonctionnalités</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="prices.html">Tarifs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="proAccountCreation.html">Mon compte</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
     <!-- Openning logo container -->
     <div class="container">
         <div class="row justify-content-center">
