--- a/homepage.html
+++ b/homepage.html
@@ -108,7 +108,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
             <!-- Informations row -->
             <div class="row justify-content-center mt-5">
                 <!-- List col -->
-                <div class="col-10 col-md-5 col-lg-5 border rounded shadow mx-md-3 ">
+                <div class="col-10 col-md-8 col-lg-8 border rounded shadow mx-md-3 ">
                     <h2 class="tangerine mt-2">Quelques chiffres :</h2>
                     <ul class="didot">
                         <li class="listMargin">117 établissements hôteliers nous ont fait confiance et sont déja partenaire.</li>
@@ -119,17 +119,22 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                     </ul>
                 <!-- Closing list col -->    
                 </div>
+            </div>
+            <div class="row justify-content-center mt-5">
                 <!-- Oppening account informations col-->
                 <div class="col-10 col-md-5 col-lg-5 mt-5 mt-md-0 mt-lg-0 mx-md-3 border rounded shadow">
                     <h2 class="tangerine mt-2">Essayez dès maintenant :</h2>
                     <p class="listMargin didot">Créez votre compte gratuitement afin d’essayer Les services de notre plateforme, et augmentez votre taux de réservatione ainsi que votre chiffre d'affaire dès maintenant !</p>
                 <!-- Closing account informations col-->    
                 </div>
+            </div>
+            <div class="row justify-content-center mt-5">
                 <!-- Account creation button -->
-                <div class="col-8 col-md-4 col-lg-4 text-center mt-5">
+                <div class="col-8 col-md-4 col-lg-4 text-center">
                     <button class="btn btn-outline-light accountButton border rounded shadow" type="button" data-toggle="modal" data-target="#accountModal">Créer un compte</button>
                 <!-- Closing btn col -->
                 </div>
+            </div>
                 <!-- Account creation modal -->
                 <div class="modal fade" id="accountModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
