--- a/proAccountCreation.html
+++ b/proAccountCreation.html
@@ -71,6 +71,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
                         <input type="text" id="mailInput"></input>
                         <label class="mt-3">Mot de passe</label>
                         <input type="text" id="passwordInput"></input>
+                        <div id="StrengthDisp" class="mt-2 text-center badge displayBadge"></div>
                         <p class="didot mt-3">Vous avez déja un compte ? <a href="connexionPage.html">Connectez vous</a></p>
                         <div class="col-12 text-center">
                         <button type="submit" class="btn btn-outline-light priceButton border rounded shadow mt-3">Confirmer</button>
